Display hostnames on the face of a patch if system is load balanced and the collapse option has been applied. Add yellow collapse indicator to affected patches. Add styleguide test cases. Correct spelling of collapse.

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -98,6 +98,15 @@ header a:hover {
     min-height: 200px;
 }
 
+.patch:hover .url,
+.patch-hover .url {
+    line-height: 14px;
+    word-break: break-all;
+    word-wrap: none;
+    overflow: visible;
+    white-space: normal;
+}
+
 .green {
     background-color: #22A954;
     color:white;
@@ -159,6 +168,14 @@ header a:hover {
     margin-top: 2px;
 }
 
+.status-patch .collapsed {
+    font-size: 14px;
+    padding:0 0 0 5px;
+    background-color: #EA902F;
+    width: 98px;
+    line-height: 18px;
+}
+
 .status-patch .state {
     flex-grow: 1;
     text-align: center;
@@ -178,7 +195,9 @@ header a:hover {
 }
 
 .status-patch:hover .detail,
-.status-patch-hover .detail {
+.status-patch-hover .detail,
+.status-patch .detail-static,
+.status-patch:hover .detail-static {
     overflow-y: auto;
     overflow-x: hidden;
     margin:8px 0px 10px 0px;
@@ -191,16 +210,19 @@ header a:hover {
     letter-spacing: 0.5px;
 }
 
-.detail::-webkit-scrollbar-track {
+.detail::-webkit-scrollbar-track,
+.detail-static::-webkit-scrollbar-track {
     background-color: rgba(0,0,0,0);
 }
 
-.detail::-webkit-scrollbar {
+.detail::-webkit-scrollbar,
+.detail-static::-webkit-scrollbar {
     width:5px;
     background-color: rgba(0,0,0,0);
 }
 
-.detail::-webkit-scrollbar-thumb {
+.detail::-webkit-scrollbar-thumb,
+.detail-static::-webkit-scrollbar-thumb {
     background-color: rgba(255,255,255,0.75);
 }
 
@@ -220,7 +242,6 @@ header a:hover {
     text-align: center;
     font-size: 20px;
     text-transform: uppercase;
-
     letter-spacing: 4px;
 }
 
@@ -242,13 +263,34 @@ header a:hover {
     font-size: 11px;
 }
 
+.hostlist {
+    list-style: none;
+    margin:0;
+    padding:0;
+    letter-spacing: 0.5px;
+    font-size: 11px;
+    margin: 10px 0px 10px 0px;
+}
+
+.host {
+    background-color: inherit;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    display:block;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+.host div {
+    margin-bottom: 5px;
+}
+
 .job {
     background-color: inherit;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
     padding: 2px 2px 2px 2px;
 }
 
-.job:last-child {
+.job:last-child, .host:last-child {
     border-bottom: none;
 }
 
@@ -277,17 +319,6 @@ header a:hover {
     word-wrap: none;
     overflow: hidden;
     white-space: nowrap;
-}
-
-.patch:hover .url,
-.patch-hover .url {
-    padding:1px;
-    margin:0;
-    line-height: 14px;
-    word-break: break-all;
-    word-wrap: none;
-    overflow: visible;
-    white-space: normal;
 }
 
 /* Loading animation */
